fix(workspace): raise dockview sash z-index from 1 to 10
dockview splitter sash 的 z-index:1 会被相邻 panel 内容覆盖,导致拖拽
splitter 时 hit-area 被遮挡、难以抓取。抬到 10 让 sash 始终可点。

horizontal / vertical 两方向的 .dv-sash 与 ::before 共 4 处同步。

--- a/src/renderer/app/globals.css
+++ b/src/renderer/app/globals.css
@@ -848,7 +848,7 @@ body {
 
 .dv-split-view-container.dv-horizontal > .dv-sash-container > .dv-sash {
   width: 5px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .dv-split-view-container.dv-horizontal > .dv-sash-container > .dv-sash::before {
@@ -859,7 +859,7 @@ body {
   left: 2px;
   width: 1px;
   background-color: var(--border);
-  z-index: 1;
+  z-index: 10;
 }
 
 .dv-split-view-container.dv-horizontal
@@ -871,7 +871,7 @@ body {
 
 .dv-split-view-container.dv-vertical > .dv-sash-container > .dv-sash {
   height: 5px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .dv-split-view-container.dv-vertical > .dv-sash-container > .dv-sash::before {
@@ -882,7 +882,7 @@ body {
   top: 2px;
   height: 1px;
   background-color: var(--border);
-  z-index: 1;
+  z-index: 10;
 }
 
 .dv-split-view-container.dv-vertical
